<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.authentication.fragment.SignUpFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/text_button_sign_up"
        style="@style/StyleTextSignUp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneTextField"
        style="@style/StyleTextInputLayout"
        android:layout_marginTop="@dimen/dp_50"
        android:hint="@string/hint_input_phone_number"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/color_03786D"
        app:hintTextColor="@color/color_03786D">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/StyleTextInputEditField"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField"
        style="@style/StyleTextInputLayout"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/hint_text_password"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/color_03786D"
        app:hintTextColor="@color/color_03786D"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/StyleTextInputEditField"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/comfirmPassTextField"
        style="@style/StyleTextInputLayout"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/hint_text_comfirm_password"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/color_03786D"
        app:hintTextColor="@color/color_03786D"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/StyleTextInputEditField"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/agreeCheckBox"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_40"
        android:text="@string/text_check_box"
       style="@style/StyleCheckboxAuth" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignUp"
        style="@style/StyleButtonAuth"
        android:text="@string/text_button_sign_up" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buttonLogin"
        style="@style/StyleImageButtonAuth"
        android:src="@drawable/login" />

</androidx.appcompat.widget.LinearLayoutCompat>